<resources>
    <string name="app_name">NotMediaT</string>
    <string name="description_post_author_avatar">Author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_likes">Likes count</string>
    <string name="description_shared">Shares count</string>
    <string name="description_views">Views count</string>
    <string name="remove_post">Remove post</string>
    <string name="new_post">Create new post</string>
    <string name="description_create_new_post">Add new post</string>
    <string name="empty_content">Content of the post can\'t be empty!</string>
    <string name="edit_post">Edit post</string>
    <string name="description_cancel_edit">Cancel edit</string>
    <string name="error_empty_content">Content of the post is empty!</string>
    <string name="complete_sharing">Your sharing was successful</string>
    <string name="new_post_has_created">New post has created successfully</string>
    <string name="post_has_edited">The post has edited successfully</string>
    <string name="show_post">Here will be appear the post…</string>
    <string name="chooser_share_post">Choose where you want to share the post</string>
    <string name="clickable_properties" translatable="false">author=%1$b\npublished=%2$b\ncontent=%3$b\navatar=%4$b\nmenu=%5$b\nlikes=%6$b\nshares=%7$b\nviews=%8$b\nattachments=%9$b\nthis=%10$b</string>
    <string name="description_attachments">Attachments</string>
    <string name="description_attachment_preview">@string/description_play</string>
    <string name="description_play">Play attachment</string>
    <string name="description_finish_attachments_view">Finish attachments view</string>
</resources>
