<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/indent"
    tools:context=".activity.AppActivity">

    <ImageView
        android:id="@+id/avatar"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        tools:srcCompat="@sample/posts.json/data/authorAvatar"
        android:contentDescription="@string/description_post_author_avatar" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@sample/posts.json/data/author"
        android:singleLine="true"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/menu"
        android:layout_marginHorizontal="@dimen/indent" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@sample/posts.json/data/published"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        android:layout_marginStart="@dimen/indent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/description_post_menu" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <ScrollView
        android:id="@+id/post_text_container"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:paddingEnd="@dimen/indent"
        android:isScrollContainer="true"
        app:layout_constraintTop_toBottomOf="@id/barrierTop"
        app:layout_constraintBottom_toTopOf="@id/barrierBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/content" >

    <TextView
        android:id="@+id/clickableProperty"
        android:textSize="@dimen/prop_size"
        tools:text="@string/complete_sharing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/indent" />

    </ScrollView>

    <TextView
        android:id="@+id/content"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/indent"
        app:layout_constraintTop_toBottomOf="@id/barrierTop"
        app:layout_constraintBottom_toTopOf="@id/barrierBottom"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottom"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likes"
        android:checkable="true"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        app:layout_constraintEnd_toStartOf="@id/share"
        app:icon="@drawable/like_selector"
        tools:text="@sample/posts.json/data/likes"
        android:contentDescription="@string/description_likes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.AppTheme.NMediaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/likes"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        app:icon="@drawable/ic_baseline_share_24"
        tools:text="@sample/posts.json/data/reposts"
        android:contentDescription="@string/description_shared" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/attachments"
        style="@style/Widget.AppTheme.NMediaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/views"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        app:icon="@drawable/ic_attachments_24"
        android:visibility="invisible"
        android:contentDescription="@string/description_attachments" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/views"
        style="@style/Widget.AppTheme.NMediaButton"
        android:clickable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:rippleColor="@android:color/transparent"
        app:icon="@drawable/ic_baseline_visibility_24"
        tools:text="@sample/posts.json/data/views"
        app:layout_constraintStart_toEndOf="@id/share"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        android:contentDescription="@string/description_views" />

</androidx.constraintlayout.widget.ConstraintLayout>